--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<nav class="navbar">
+    <div class="navbar-container">
+      <a href="/" class="navbar-logo">
+        <img src="assets/carbon-footprint.png" alt="Logo" class="logo" />
+        My App
+      </a>
+      <ul class="navbar-links">
+        <li class="navbar-item"><a href="/">Home</a></li>
+        <li class="navbar-item"><a href="/about">About</a></li>
+        <li class="navbar-item"><a href="/services">Services</a></li>
+        <li class="navbar-item"><a href="/contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  
