--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
   }
   
   .navbar-logo {
@@ -40,5 +41,22 @@
   
   .navbar-item a:hover {
     text-decoration: underline;
+  }
+
+  .navbar-user {
+    display: flex;
+    align-items: center;
+  }
+  
+  .user-icon {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .username {
+    color: white;
+    font-size: 1.1rem;
   }
   
