--- a/src/app/components/carbon-footprint/carbon-footprint.component.css
+++ b/src/app/components/carbon-footprint/carbon-footprint.component.css
@@ -8,38 +8,39 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
   
-  /* Styling for the information paragraphs */
+
   .info-container p {
     font-size: 1.1rem;
     margin: 10px 0;
-    color: #333;
   }
   
-  /* Bold title styling */
   strong {
     font-weight: bold;
-    color: #4CAF50; /* Green for dynamic effect */
+    
   }
   
-  /* Styling for the distance */
-  .distance p {
-    color: #2196F3; /* Blue for distance */
-  }
   
+  .long-distance {
+    font-weight: bold;
+    color: green !important;
+  }
+
+  .short-distance {
+    font-weight: bold;
+    color: red !important;
+  }
+
 
   .consumption p {
     font-size: 1.1rem;
   }
  
-  .consumption p:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  
   .low-consumption{
-    color: #4CAF50;
+    color: #4CAF50 !important;
   }
 
-  .high-consumption{
-    color: red;
+  .high-consumption {
+    color: red !important;
   }
+  
+  
