--- a/src/app/components/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/components/carbon-footprint/carbon-footprint.component.html
@@ -2,23 +2,6 @@
 <app-carbon-footprint-result></app-carbon-footprint-result>
 
 
-<div class="info-container">
-    <div class="distance">
-      <p><strong>Distance traveled:</strong> {{ distanceKm }} km</p>
-    </div>
-    <div class="consumption">
-      <p [ngClass]="{ 
-        'low-consumption': Km100Consumption < 4, 
-        'high-consumption': Km100Consumption > 7
-        }">
-        <strong>Consumption per 100 km:</strong> 
-        {{ Km100Consumption }} L/100km
-    </p>
-    </div>
-    <div class="totalconsumption">
-        <p><strong>total:</strong> {{ calculateConsumption() }} </p>
-      </div>
-  </div>
   
   @if(Km100Consumption > 7){
     <p>Warning, your consumption is high</p>
@@ -27,4 +10,34 @@
   
   @if(Km100Consumption < 4){
     <p>Congratulations, your consumption is low</p>
+  }
+
+  @for (travel of travels; track $index) {
+
+    <div class="info-container">
+
+      <div class="distance">
+        <p [ngClass]="{
+          'long-distance': travel.distanceKm < 500,
+          'short-distance': travel.distanceKm > 100
+        }">
+          <strong>Distance traveled:</strong> {{ travel.distanceKm }} km
+        </p>
+        <button (click)="add100KmToTheDistance()">+100Km</button>
+      </div>
+  
+      <div class="consumption">
+        <p [ngClass]="{ 
+          'low-consumption': travel.Km100Consumption < 4, 
+          'high-consumption':travel.Km100Consumption > 7
+        }">
+          <strong>Consumption per 100 km:</strong> 
+          {{ travel.Km100Consumption }} L/100km
+        </p>
+      </div>
+  
+      <div class="totalconsumption">
+          <p><strong>total:</strong> {{ calculateConsumption() }} </p>
+        </div>
+    </div>
   }
