--- a/src/app/components/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/components/carbon-footprint/carbon-footprint.component.html
@@ -1,7 +1,3 @@
-<app-carbon-footprint-form></app-carbon-footprint-form>
-<app-carbon-footprint-result></app-carbon-footprint-result>
-
-
   
   @if(Km100Consumption > 7){
     <p>Warning, your consumption is high</p>
@@ -11,33 +7,57 @@
   @if(Km100Consumption < 4){
     <p>Congratulations, your consumption is low</p>
   }
+  <div class="container mx-auto p-6 bg-gray-100 rounded-lg shadow-lg">
+    <h2 class="text-2xl font-bold text-gray-700 mb-6">Travel List</h2>
+    <strong>Total :</strong> {{ calculateAverage() }} L
+    <p>Quantity Co2 {{quantityCo2Total }}</p>
+    <button 
+      class="mb-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
+      (click)="addTravel()">
+      Add Travel
+    </button>
 
+
+    <div class="container mx-auto p-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   @for (travel of travels; track $index) {
+   
+      <div
 
-    <div class="info-container">
+        class="w-96 h-64 duration-500 group overflow-hidden relative rounded bg-neutral-800 text-neutral-50 p-4 flex flex-col justify-evenly"
+      >
 
-      <div class="distance">
-        <p [ngClass]="{
-          'long-distance': travel.distanceKm < 500,
-          'short-distance': travel.distanceKm > 100
-        }">
-          <strong>Distance traveled:</strong> {{ travel.distanceKm }} km
-        </p>
-        <button (click)="add100KmToTheDistance()">+100Km</button>
-      </div>
-  
-      <div class="consumption">
-        <p [ngClass]="{ 
-          'low-consumption': travel.Km100Consumption < 4, 
-          'high-consumption':travel.Km100Consumption > 7
-        }">
-          <strong>Consumption per 100 km:</strong> 
-          {{ travel.Km100Consumption }} L/100km
-        </p>
-      </div>
-  
-      <div class="totalconsumption">
-          <p><strong>total:</strong> {{ calculateConsumption() }} </p>
+        <div
+          class="absolute blur duration-500 group-hover:blur-none w-72 h-72 rounded-full group-hover:translate-x-12 group-hover:translate-y-12 bg-green-900 right-1 -bottom-24"
+        ></div>
+        <div
+          class="absolute blur duration-500 group-hover:blur-none w-12 h-12 rounded-full group-hover:translate-x-12 group-hover:translate-y-2 bg-green-700 right-12 bottom-12"
+        ></div>
+        <div
+          class="absolute blur duration-500 group-hover:blur-none w-36 h-36 rounded-full group-hover:translate-x-12 group-hover:-translate-y-12 bg-green-800 right-1 -top-12"
+        ></div>
+        <div
+          class="absolute blur duration-500 group-hover:blur-none w-24 h-24 bg-green-700 rounded-full group-hover:-translate-x-12"
+        ></div>
+    
+        <!-- Card Content -->
+        <div class="z-10 flex flex-col justify-evenly w-full h-full">
+          <span class="text-2xl font-bold">Voyage {{ travel.id }}</span>
+          <p>
+            <strong>Distance :</strong> {{ travel.distanceKm }} km<br />
+            <strong>Consumption :</strong> {{ travel.Km100Consumption }} L/100km<br />
+            <strong>Co2 :</strong> {{ travel.quantityCo2 }}<br />
+        
+          </p>
+          <button
+            class="hover:bg-neutral-200 bg-neutral-50 rounded text-neutral-800 font-extrabold w-full p-3"
+            (click)="add100Km()"
+          >
+           +100 km
+          </button>
         </div>
-    </div>
+      </div>
+    
   }
+</div>
+  </div>
+
