--- a/src/app/components/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/components/carbon-footprint/carbon-footprint.component.html
@@ -9,7 +9,7 @@
   }
   <div class="container mx-auto p-6 bg-gray-100 rounded-lg shadow-lg">
     <h2 class="text-2xl font-bold text-gray-700 mb-6">Travel List</h2>
-    <strong>Total :</strong> {{ calculateAverage() }} L
+    <strong>Total :</strong> {{ distanceKm }} L
     <p>Quantity Co2 {{quantityCo2Total }}</p>
     <button 
       class="mb-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
