--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<router-outlet></router-outlet> 
 <app-header></app-header>
 <app-carbon-footprint></app-carbon-footprint>
 <app-footer></app-footer>
