--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="bg-gray-900 text-white py-6 w-full absolute bottom-0">
+  <div class="container mx-auto text-center">
+    <p class="text-sm">
+      © {{ date }} Carbon Footprint Calculator. All rights reserved.
+    </p>
+   
+    <div class="mt-4 text-sm">
+      <p>
+        Built with ❤️ by 
+        <a href="https://github.com/NaycenAl" class="text-blue-400 hover:underline">Naycen Aloulou</a>.
+      </p>
+    </div>
+  </div>
+</footer>
