--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="p-4">
+  <button (click)="login()"> Login </button>
+    
+    <h1 class="text-xl text-center">Welcome to the Carbon Footprint Calculator</h1>
+    <p class="mt-4 text-center">
+      Use this tool to calculate and reduce your carbon emissions.
+    </p>
+  </div>
