--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-
+<div class="flex flex-col h-screen justify-between">
 <app-header></app-header>
 
 <router-outlet></router-outlet> 
 
 <app-footer></app-footer>
+</div>
