--- a/src/app/components/carbon-footprint-form/carbon-footprint-form.component.html
+++ b/src/app/components/carbon-footprint-form/carbon-footprint-form.component.html
@@ -1,17 +1,90 @@
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md space-y-7 mt-5">
 
+    <h2 class="text-3xl font-bold text-center text-green-600 mb-4">
+        🌱 Add your travel! 
+        <span class="text-sm text-gray-500 block">And let’s see how green your trip is!</span>
+    </h2>
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+    
+    <div>
+      <label for="travelType">Travel way:</label>
+      <select name="travelType" id="travelType" formControlName="travelType">
+        <option value="Car">Car</option>
+        <option value="Plane">Plane</option>
+        <option value="Train">Train</option>
+      </select>
 
-
-<label for=""></label>
-<input id="" name="" formControlName="att1"> 
-@if (isSubmited) {
-    @if (form.get('email')?.errors?.['required']){
-        <div class="">Incorrect mail format</div>
+      @if(isSubmited && form.get('travelType')?.hasError('pattern')){
+        <div class="error text-red-600">Incorrect choice
+          </div>
     }
-}
+     </div>
 
-<input type="sumbit">
-</form>
+    <div class="flex flex-col pt-14">
+        <label for="distanceKm" class="text-gray-700 font-semibold mb-1">Distance</label>
+        <input 
+          id="distanceKm" 
+          name="distanceKm" 
+          formControlName="distanceKm" 
+          type="number" 
+          placeholder="Enter the distance in km"
+          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+        >
+        @if(isSubmited && form.get('disatnce')?.hasError('required')){
+            <div class="error text-red-600">distance is required</div>
+        }
+        @if(isSubmited && form.get('distance')?.hasError('min')){
+            <div class="error text-red-600">distance must be > 0
+              </div>
+        }
+      </div>
+    
+      @if(form.get("travelType")?.value == "Car"){
+      <div class="flex flex-col">
+        <label for="consumption" class="text-gray-700 font-semibold mb-1">Consumption</label>
+        <input 
+          id="consumption" 
+          name="consumption" 
+          formControlName="Km100Consumption" 
+          type="number" 
+          placeholder="Enter the fuel consumption in L"
+          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+        >
+        @if(isSubmited && form.get('consumption')?.hasError('required')){
+            <div class="error text-red-600">consumption is required</div>
+        }
+        @if(isSubmited && form.get('consumption')?.hasError('min')){
+            <div class="error text-red-600">consumption must be > 0
+              </div>
+        }
+      </div>
+      }
 
-
+      <div class="flex flex-col">
+        <label for="date" class="text-gray-700 font-semibold mb-1">Date</label>
+        <input 
+          id="date" 
+          name="date" 
+          formControlName="date" 
+          type="date" 
+          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+        >
+        @if(isSubmited && form.get('date')?.hasError('required')){
+            <div class="error text-red-600">Date is required</div>
+        }
+        @if(isSubmited && form.get('date')?.hasError('greaterThan')){
+            <div class="error text-red-600">The date cannot be in the future (see BTF3)
+              </div>
+        }
+      
+      </div>
+    
+      <div class="mt-4">
+        <button 
+          type="submit" 
+          class="w-full bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-600 transition-colors duration-300"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
