--- a/src/app/components/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/components/carbon-footprint/carbon-footprint.component.html
@@ -1,16 +1,20 @@
   
-  @if(Km100Consumption > 7){
-    <p>Warning, your consumption is high</p>
-  }
-
+ 
   
-  @if(Km100Consumption < 4){
-    <p>Congratulations, your consumption is low</p>
-  }
-  <div class="container mx-auto p-6 bg-gray-100 rounded-lg shadow-lg">
+
+  <div class="container mx-auto p-6 bg-gray-100 rounded-lg shadow-lg overflow-y-auto ">
     <h2 class="text-2xl font-bold text-gray-700 mb-6">Travel List</h2>
-    <strong>Total :</strong> {{ distanceKm }} L
-    <p>Quantity Co2 {{quantityCo2Total }}</p>
+    <strong>Total Consumption :</strong> {{ distanceKm }} L
+    <strong>Quantity Co2 <span> {{quantityCo2Total }}</span></strong>
+
+    @if(Km100Consumption > 7){
+      <p class="text-red-600">Warning, your consumption is high</p>
+    }
+    @if(Km100Consumption < 4){
+      <p class="text-green-700">Congratulations, your consumption is low</p>
+    }
+
+    <h2 class="text-2xl font-bold text-gray-700 mb-6">Travel List</h2>
     <button 
       class="mb-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
       (click)="addTravel()">
