--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-900 text-white py-6 w-full absolute bottom-0">
+<footer class="bg-gray-900 text-white py-6 bottom-0">
   <div class="container mx-auto text-center">
     <p class="text-sm">
       © {{ date }} Carbon Footprint Calculator. All rights reserved.
