--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,12 +8,12 @@
     </a>
 
     <!-- Navigation Links -->
-    <ul class="navbar-links flex gap-4 items-center">
+    <ul class="navbar-links flex gap-4 items-center ml-96">
       <li class="navbar-item">
         <a routerLink="/"  class="hover:text-blue-400 transition">Home</a>
       </li>
       <li class="navbar-item">
-        <a routerLink="/summary" class="hover:text-blue-400 transition">Summary</a>
+        <a routerLink="/summary" class="hover:text-blue-400 transition">My travels</a>
       </li>
       <li class="navbar-item">
         <a routerLink="/add-travel" class="hover:text-blue-400 transition">Add Travel</a>
