--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -2,3 +2,7 @@
 @if(username) {
     <p class="items-center text-3xl">Bienvenue sur votre profil {{username}}</p>
 }
+<div class="justify-center flex">
+<p class="text-3xl">My Carbon Footprint : </p>
+<p class="text-3xl "> {{myCarbonfootPrint}}</p>
+</div>
