--- a/src/app/components/carbon-footprint-form/carbon-footprint-form.component.html
+++ b/src/app/components/carbon-footprint-form/carbon-footprint-form.component.html
@@ -6,9 +6,9 @@
     </h2>
 
     
-    <div>
-      <label for="travelType">Travel way:</label>
-      <select name="travelType" id="travelType" formControlName="travelType">
+    <div class="flex flex-col pt-14">
+      <label for="travelType" class="text-gray-700 font-semibold mb-1">Travel way:</label>
+      <select name="travelType" id="travelType" formControlName="travelType"  class="px-1 py-1 border border-gray-400 rounded-md focus:outline-none focus:ring-2 focus:ring-green-600">
         <option value="Car">Car</option>
         <option value="Plane">Plane</option>
         <option value="Train">Train</option>
@@ -20,7 +20,7 @@
     }
      </div>
 
-    <div class="flex flex-col pt-14">
+    <div class="flex flex-col pt-8">
         <label for="distanceKm" class="text-gray-700 font-semibold mb-1">Distance</label>
         <input 
           id="distanceKm" 
@@ -28,7 +28,7 @@
           formControlName="distanceKm" 
           type="number" 
           placeholder="Enter the distance in km"
-          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+          class="border-gray-400 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
         >
         @if(isSubmited && form.get('disatnce')?.hasError('required')){
             <div class="error text-red-600">distance is required</div>
@@ -48,7 +48,7 @@
           formControlName="Km100Consumption" 
           type="number" 
           placeholder="Enter the fuel consumption in L"
-          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+          class=" border-gray-400 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
         >
         @if(isSubmited && form.get('consumption')?.hasError('required')){
             <div class="error text-red-600">consumption is required</div>
@@ -67,7 +67,7 @@
           name="date" 
           formControlName="date" 
           type="date" 
-          class="px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
+          class="px-4 py-2 border-gray-400 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-600"
         >
         @if(isSubmited && form.get('date')?.hasError('required')){
             <div class="error text-red-600">Date is required</div>
